# beanbeaver

./: Cargo.toml  README.md  pixi.toml  pyproject.toml
.github/workflows/: coverage.yml  e2e-live-manual.yml  e2e-tests.yml  lint.yml  private-regression.yml  tests.yml
application/: __init__.py
application/imports/: account_discovery.py  chequing.py  credit_card.py  csv_routing.py  shared.py
application/receipts/: __init__.py  approval.py  match.py  review.py
cli/: api.py  main.py  receipt.py
demo/: run_demo.sh
docs/: pixi_rust_migration_draft.md  trust_zone.md
domain/: card_transaction.py
ledger_access/: _native.py  _paths.py  reader.py  writer.py
receipt/: _rust.py  item_categories.py  matcher.py  ocr_helpers.py  ocr_result_parser.py  staged_json.py
receipt/beancount_rendering/: __init__.py  stage_renderer.py
receipt/ocr_extraction/: __init__.py  schema.py
receipt/ocr_parser/: common.py  fields_parser.py  items_spatial_parser.py  items_text_parser.py
rules/: default_item_classifier.toml  default_merchant_families.toml  default_merchant_rules.toml
runtime/: __init__.py  item_category_rules.py  merchant_families.py  merchant_rules.py  paths.py  receipt_storage.py  rule_engine.py  tui_config.py
src/: lib.rs  main.rs  matcher.rs  receipt_spatial.rs  spatial.rs  tui.rs
tests/: README.md  conftest.py  test_account_discovery_transfer.py  test_card_transaction.py  test_cli_api.py  test_cli_receipt_editors.py  test_item_categories.py  test_ledger_reader.py  test_ledger_writer.py  test_match_preflight.py  test_matcher.py  test_merchant_families_layers.py  test_merchant_rules_layers.py  test_ocr_helpers.py  test_receipt_fields_parser.py  test_receipt_spatial_parser.py  test_receipt_storage_legacy_migration.py  test_receipt_text_parser.py  test_rule_engine_public_rules.py  test_runtime_paths.py  test_smoke.py
