[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beanbeaver"
version = "0.1.0"
description = "Personal beancount importers and receipt scanner"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "beancount>=2.3,<3",
    "httpx>=0.24.0",
    "pillow>=10.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "python-multipart>=0.0.9",
    "pandas>=2.0.0",
]

[project.scripts]
bb = "beanbeaver.cli.main:main"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
dev = [
    "maturin>=1.7",
    "mypy>=1.8",
    "ruff>=0.6",
]

[tool.setuptools]
include-package-data = true
packages = [
    "beanbeaver",
    "beanbeaver.application",
    "beanbeaver.application.imports",
    "beanbeaver.application.receipts",
    "beanbeaver.cli",
    "beanbeaver.domain",
    "beanbeaver.importers",
    "beanbeaver.ledger_access",
    "beanbeaver.receipt",
    "beanbeaver.receipt.ocr_parser",
    "beanbeaver.runtime",
    "beanbeaver.util",
]

[tool.setuptools.package-dir]
beanbeaver = "."

[tool.setuptools.package-data]
beanbeaver = ["rules/*.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring external services (OCR container, CLI server)",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict= (python 3.10+)
]

[tool.ruff.lint.per-file-ignores]
"domain/card_transaction.py" = ["E501"]  # Allow long lines in merchant matching

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_ignores = true
ignore_missing_imports = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "beancount.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true
